src/test/deca/context/valid/testMethodAsmBody.deca
class A {
	void test()asm("Hello");
}
