src/test/deca/context/invalid/testWrongTypeCondition.deca
{
	if (2) {
		print(3);
	}
}
